📁 Adopt Java Template Engine (JTE)

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,7 +22,8 @@
     "customizations": {
         "vscode": {
             "settings": {
-                "java.configuration.updateBuildConfiguration": "automatic"
+                "java.configuration.updateBuildConfiguration": "automatic",
+                "editor.defaultFormatter": "EditorConfig.EditorConfig"
 			},
             "extensions": [
                 "mhutchie.git-graph",
