--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,6 +41,8 @@ spring.mvc.problemdetails.enabled=true
 ## Application
 notify.smtp.from=contact@nzuguem.me
 notify.env=dev
+### Injecting configuration from Maven
+notify.jte.packageName=@me.nzuguem.notify.jte.packageName@
 
 ## Datasource
 spring.datasource.url=jdbc:postgresql://localhost:5432/customers
