--- a/config-managment/rec.properties
+++ b/config-managment/rec.properties
@@ -1,4 +1,6 @@
 notify_smtp_from=contact-rec@nzuguem.me
+notify_sms_from=996
+notify_goff_url=http://localhost:1031
 notify_env=rec
 spring_datasource_url=jdbc:postgresql://localhost:5432/customers
 spring_datasource_username=customer
