--- a/external-dependencies/compose.yml
+++ b/external-dependencies/compose.yml
@@ -2,3 +2,4 @@ include:
   - path: smtp/compose.yml
   - path: database/compose.yml
   - path: observability/compose.yml
+  - path: feature-flag/compose.yml
