--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,7 +40,9 @@ spring.mvc.problemdetails.enabled=true
 
 ## Application
 notify.smtp.from=contact@nzuguem.me
+notify.sms.from=999
 notify.env=dev
+notify.goff.url=http://localhost:1031
 ### Injecting configuration from Maven
 notify.jte.packageName=@me.nzuguem.notify.jte.packageName@
 
