--- a/config-managment/prod.properties
+++ b/config-managment/prod.properties
@@ -1,4 +1,6 @@
 notify_smtp_from=contact-prod@nzuguem.me
+notify_sms_from=999
+notify_goff_url=http://localhost:1031
 notify_env=prod
 spring_datasource_url=jdbc:postgresql://localhost:5432/customers
 spring_datasource_username=customer
