--- a/config-managment/prod.properties
+++ b/config-managment/prod.properties
@@ -1,11 +1,28 @@
+# Application config
 notify_smtp_from=contact-prod@nzuguem.me
 notify_sms_from=999
 notify_goff_url=http://localhost:1031
 notify_env=prod
+
+# Datasource Config
 spring_datasource_url=jdbc:postgresql://localhost:5432/customers
 spring_datasource_username=customer
 spring_datasource_password=customer
+
+# AMQP Config
+spring_rabbitmq_password=secret
+spring_rabbitmq_username=myuser
+spring_rabbitmq_host=localhost
+spring_rabbitmq_port=5672
+
+# Actuator Config
 management_otlp_tracing_endpoint=http://localhost:4318/v1/traces
+management_otlp_metrics_export_url=http://localhost:4318/v1/metrics
+
+# SMTP Config
 spring_mail_host=localhost
 spring_mail_port=1025
-management_otlp_metrics_export_url=http://localhost:4318/v1/metrics
+
+
+# JVM Options
+JAVA_OPTS=-Dnotify_log_level=WARN
