--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,8 @@ spring.mail.port=1025
 
 ## TestContainers
 spring.testcontainers.beans.startup=parallel
+### Support for injecting a DynamicPropertyRegistry into @Bean methods is deprecated. Register 'spring.mail.host' using a DynamicPropertyRegistrar bean instead. Alternatively, set spring.testcontainers.dynamic-property-registry-injection to 'warn' to replace this failure with a warning or to 'allow' to permit injection of the registry.
+spring.testcontainers.dynamic-property-registry-injection=warn
 
 ## Virtual Thread
 spring.threads.virtual.enabled=true
@@ -61,3 +63,20 @@ management.endpoint.health.show-details=always
 ## https://docs.spring.io/spring-boot/reference/web/graceful-shutdown.html
 spring.lifecycle.timeout-per-shutdown-phase=30s
 server.shutdown=graceful
+
+## AMQP - RabbitMQ
+spring.rabbitmq.password=secret
+spring.rabbitmq.username=myuser
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.initial-interval=3s
+spring.rabbitmq.listener.simple.retry.max-attempts=3
+spring.rabbitmq.listener.simple.retry.max-interval=10s
+spring.rabbitmq.listener.simple.retry.multiplier=2
+
+## Flexy Pool
+### Enable logging and publishing ConnectionAcquisitionTimeThresholdExceededEvent when a connection acquisition request has timed out
+decorator.datasource.flexy-pool.threshold.connection.acquisition=-1
+### Enable logging and publishing ConnectionLeaseTimeThresholdExceededEvent when a connection lease has exceeded the given time threshold
+decorator.datasource.flexy-pool.threshold.connection.lease=0
