--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -78,6 +78,14 @@ tasks:
                 "cartLink": "htts://shop.nzuguem.me/carts/XYZ"
             }
         }'
+
+  send-cart-abandonment-mail-amqp:
+    desc: Send Cart Abandonment Mail AMQP.
+    cmd: >-
+      rabbitmqadmin publish -u myuser -p secret
+      exchange=notify-exchange routing_key=email
+      payload="{\"customerId\":\"10\",\"notificationType\":\"CART_ABANDONMENT\",\"channel\":\"SMTP\",\"context\":{\"products\":\"vodka, doritos\",\"cartLink\":\"htts://shop.nzuguem.me/carts/XYZ\"}}"
+
   send-cart-abandonment-sms:
     desc: Send Cart Abandonment SMS.
     cmd: >-
@@ -92,6 +100,15 @@ tasks:
                 "cartLink": "htts://shop.nzuguem.me/carts/XYZ"
             }
         }'
+
+  send-cart-abandonment-sms-amqp:
+    desc: Send Cart Abandonment SMS AMQP.
+    cmd: >-
+      rabbitmqadmin publish -u myuser -p secret
+      exchange=notify-exchange routing_key=sms
+      payload="{\"customerId\":\"15\",\"notificationType\":\"CART_ABANDONMENT\",\"channel\":\"SMS\",\"context\":{\"products\":\"vodka, doritos\",\"cartLink\":\"htts://shop.nzuguem.me/carts/XYZ\"}}"
+
+
   send-promotion-mail-comsume-heap-space:
     desc: Send Cart Abandonment Mail.
     cmd: >-
@@ -109,7 +126,7 @@ tasks:
         }'
 
   send-promotion-sms:
-    desc: Send Cart Abandonment Mail.
+    desc: Send Promotion SMS.
     cmd: >-
         curl --location 'http://localhost:8080/notify'
         --header 'Content-Type: application/json'
@@ -123,3 +140,26 @@ tasks:
                 "percentage": "80"
             }
         }'
+
+  send-promotion-sms-amqp:
+    desc: Send Promotion SMS AMQP.
+    cmd: >-
+      rabbitmqadmin publish -u myuser -p secret
+      exchange=notify-exchange routing_key=sms
+      payload="{\"customerId\":\"19\",\"notificationType\":\"PROMOTION\",\"channel\":\"SMS\",\"context\":{\"deadline\":\"25/11/2015 - 23:59:59\",\"promotionLink\":\"htts://shop.nzuguem.me/promotions/XYZ\",\"percentage\":\"80\"}}"
+
+  install-rabbitmq-admin-cli:
+    desc: Install RabbitMQ Admin CLI
+    cmds:
+    - sudo curl http://localhost:15672/cli/rabbitmqadmin -o /usr/local/bin/rabbitmqadmin
+    - sudo chmod 777 /usr/local/bin/rabbitmqadmin
+    - sudo sh -c 'rabbitmqadmin --bash-completion > /etc/bash_completion.d/rabbitmqadmin'
+
+  start-external-dependencies:
+    desc: Start External Dependencies
+    cmd: docker compose -f external-dependencies/compose.yml up --wait
+
+  stop-external-dependencies:
+    desc: Stop External Dependencies
+    cmd: docker compose -f external-dependencies/compose.yml down
+
