--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jdbc</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
@@ -65,6 +69,11 @@
 			<artifactId>opentelemetry-logback-appender-1.0</artifactId>
 			<version>2.10.0-alpha</version>
   		</dependency>
+        <dependency>
+            <groupId>com.github.gavlyukovskiy</groupId>
+            <artifactId>flexy-pool-spring-boot-starter</artifactId>
+            <version>1.10.0</version>
+        </dependency>
         <!-- For Latency Visualization -->
         <dependency>
             <groupId>io.zipkin.contrib.otel</groupId>
@@ -129,6 +138,12 @@
 			<artifactId>postgresql</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>rabbitmq</artifactId>
+            <version>1.20.4</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
