Add Modernizer Maven Plugin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,8 @@ spring.mail.port=1025
 ## TestContainers
 spring.testcontainers.beans.startup=parallel
 ### Support for injecting a DynamicPropertyRegistry into @Bean methods is deprecated. Register 'spring.mail.host' using a DynamicPropertyRegistrar bean instead. Alternatively, set spring.testcontainers.dynamic-property-registry-injection to 'warn' to replace this failure with a warning or to 'allow' to permit injection of the registry.
-spring.testcontainers.dynamic-property-registry-injection=warn
+### https://github.com/spring-projects/spring-framework/issues/33501
+# spring.testcontainers.dynamic-property-registry-injection=warn
 
 ## Virtual Thread
 spring.threads.virtual.enabled=true
