--- a/config-managment/rec.properties
+++ b/config-managment/rec.properties
@@ -22,3 +22,6 @@ management_otlp_metrics_export_url=http://localhost:4318/v1/metrics
 # SMTP Config
 spring_mail_host=localhost
 spring_mail_port=1025
+
+# JVM Options
+JAVA_OPTS_APPEND=-javaagent:/application/glowroot/glowroot.jar
