--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,10 @@
         "ghcr.io/devcontainers-extra/features/go-task:1": {},
         "ghcr.io/devcontainers-extra/features/fzf:1": {},
         "ghcr.io/jsburckhardt/devcontainer-features/copa:1": {},
-        "ghcr.io/itsmechlark/features/trivy:1": {}
+        "ghcr.io/itsmechlark/features/trivy:1": {},
+        "ghcr.io/devcontainers/features/python:1": {
+          "installTools": false
+        }
     },
     "customizations": {
         "vscode": {
