🔐Add Custom CA on my Java base image

--- a/config-managment/rec.properties
+++ b/config-managment/rec.properties
@@ -24,4 +24,4 @@ spring_mail_host=localhost
 spring_mail_port=1025
 
 # JVM Options
-JAVA_OPTS_APPEND=-javaagent:/application/glowroot/glowroot.jar
+JAVA_OPTS_APPEND=-javaagent:/opt/glowroot/glowroot.jar
