--- a/demos/mco/ops/Dockerfile.v2
+++ b/demos/mco/ops/Dockerfile.v2
@@ -1,14 +1,17 @@
-## docker build -t nzuguem/java-runtime:21.0.5_11-jre -f demos/mco/ops/Dockerfile --push .
+## docker build -t nzuguem/java-runtime:21.0.5_11-v2 -f demos/mco/ops/Dockerfile.v2 --push .
 FROM eclipse-temurin:21.0.5_11-jre
 
-
-ARG GLOWROOT_VERSION=0.14.0
+ARG GLOWROOT_VERSION=0.14.5-beta.1
 ARG GLOWROOT_ZIP_NAME="glowroot-${GLOWROOT_VERSION}-dist.zip"
 ARG GLOWROOT_URL="https://github.com/glowroot/glowroot/releases/download/v${GLOWROOT_VERSION}/${GLOWROOT_ZIP_NAME}"
 
-ARG UID=10001
+RUN <<EOF
+set -eux
+apt-get install --update -y unzip
+apt-get dist-clean
+EOF
 
-WORKDIR /application
+ARG UID=10001
 
 RUN <<EOF
 adduser \
@@ -21,27 +24,23 @@ adduser \
     appuser
 EOF
 
-ADD $GLOWROOT_URL ./
+ADD $GLOWROOT_URL /opt
 
 RUN <<EOF
-apt-get update 
-apt-get install -y unzip
+cd /opt
 unzip $GLOWROOT_ZIP_NAME
 rm $GLOWROOT_ZIP_NAME
 chown -R appuser:appuser glowroot
-apt-get remove -y unzip
-apt-get autoremove -y
-rm -rf /var/lib/apt/lists/*
 EOF
 
 USER appuser
 
+WORKDIR /application
+
 ONBUILD ARG APP_NAME
 ONBUILD COPY target/$APP_NAME.jar ./app-original.jar
-ONBUILD RUN <<EOF
-java -Djarmode=tools -jar app-original.jar extract --application-filename app.jar --force --destination ./
-EOF
+ONBUILD RUN java -Djarmode=tools -jar app-original.jar extract --application-filename app.jar --force --destination ./
 
-COPY demos/mco/ops/run.sh ./run.sh
+COPY demos/mco/ops/run.v2.sh ./run.sh
 
 ENTRYPOINT ["/application/run.sh"]
