--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=notify-service-api
 ### https://github.com/spring-projects/spring-boot/issues/41460#issuecomment-2399968462
 management.opentelemetry.resource-attributes.application=${spring.application.name}
 management.tracing.sampling.probability=1.0
-management.otlp.tracing.endpoint=http://localhost:4317/v1/traces
-management.otlp.tracing.export.enabled=true
-management.otlp.tracing.transport=grpc
+management.opentelemetry.tracing.export.otlp.endpoint=http://localhost:4318/v1/traces
+management.tracing.export.otlp.enabled=true
+#management.opentelemetry.tracing.export.otlp.transport=grpc
 
 management.otlp.metrics.export.enabled=true
 management.otlp.metrics.export.url=http://localhost:4318/v1/metrics
@@ -14,9 +14,9 @@ management.otlp.metrics.export.step=5s
 management.metrics.tags.application=${spring.application.name}
 management.metrics.tags.instance=${notify.env}
 
-management.otlp.logging.export.enabled=true
-management.otlp.logging.transport=grpc
-management.otlp.logging.endpoint=http://localhost:4317/v1/logs
+management.logging.export.otlp.enabled=true
+#management.opentelemetry.logging.export.otlp.transport=grpc
+management.opentelemetry.logging.export.otlp.endpoint=http://localhost:4318/v1/logs
 
 ## Mail
 spring.mail.host=localhost
@@ -48,6 +48,7 @@ notify.env=dev
 notify.goff.url=http://localhost:1031
 ### Injecting configuration from Maven
 notify.jte.packageName=@me.nzuguem.notify.jte.packageName@
+app.kafka.topics.notifications=notifications
 
 ## Datasource
 spring.datasource.url=jdbc:postgresql://localhost:5432/customers
@@ -72,9 +73,16 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.listener.simple.retry.enabled=true
 spring.rabbitmq.listener.simple.retry.initial-interval=3s
-spring.rabbitmq.listener.simple.retry.max-attempts=3
+spring.rabbitmq.listener.simple.retry.max-retries=3
 spring.rabbitmq.listener.simple.retry.max-interval=10s
 spring.rabbitmq.listener.simple.retry.multiplier=2
+
+## Queue - Kafka Queue
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.group-id=${spring.application.name}
+spring.kafka.consumer.properties.allow.auto.create.topics=false
 
 ## Flexy Pool
 ### Enable logging and publishing ConnectionAcquisitionTimeThresholdExceededEvent when a connection acquisition request has timed out
