--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -80,9 +80,15 @@ spring.rabbitmq.listener.simple.retry.multiplier=2
 ## Queue - Kafka Queue
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JacksonJsonDeserializer
 spring.kafka.consumer.group-id=${spring.application.name}
 spring.kafka.consumer.properties.allow.auto.create.topics=false
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.consumer.properties.spring.json.use.type.headers=true
+### Consumer Group Protocol for Incremental Rebalancing
+spring.kafka.consumer.properties.group.protocol=consumer
+### Producer MUST use header "__TypeId__:<notifyRequest>"
+spring.kafka.consumer.properties.spring.json.type.mapping=notifyRequest:me.nzuguem.notify.models.NotifyRequest
 
 ## Flexy Pool
 ### Enable logging and publishing ConnectionAcquisitionTimeThresholdExceededEvent when a connection acquisition request has timed out
